@@ -1,3 +1,7 @@
+2010-01-08  Tolleiv Nietsch <nietsch@aoemedia.de>
+
+	* Fixed bug: #13001: new page wizard should respect TCEFORM.pages.* settings
+
 2010-01-06  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug: #11521: Allow include of javascript files in pagemodule
